# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnero"
version = "1.0.0"
description = "Neural-Network emulator for Reionization and Optical depth"
readme = "README.md"
authors = [{ name = "Gaétan Facchinetti", email = "gaetanfacc@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
keywords = ["cosmology", "Machine learning", "reionization"]
dependencies = [
    "numpy>=1.16.5",
    "matplotlib>=3.4.3",
    "scipy",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["21cmCAST>=1.0.0",]

[project.urls]
Homepage = "https://github.com/gaetanfacchinetti/NNERO"
